@@ -9,9 +9,7 @@ extern "C" {
 
 herr_t H5VLARRAYmake( hid_t loc_id,
 		      const char *dset_name,
-		      const char *class_,
-		      const char *title,
-		      const char *obversion,    /* The Array VERSION number */
+		      const char *obversion,
 		      const int rank,
 		      const hsize_t *dims,
 		      hid_t type_id,
